--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {},
   "author": "Jesse Kriss <jesse@jklabs.net>",
   "dependencies": {
-    "hidstream": "^2.1.0"
+    "glob": "^7.1.1",
+    "hidstream": "^2.1.0",
+    "justaudio": "^0.2.1",
+    "player": "^0.6.1"
   }
 }
