--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "glob": "^7.1.1",
     "hidstream": "^2.1.0",
-    "justaudio": "^0.2.1",
-    "player": "^0.6.1"
+    "mpg123": "^0.2.1"
   }
 }
