--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {},
   "author": "Jesse Kriss <jesse@jklabs.net>",
   "dependencies": {
+    "forever": "^0.15.3",
     "glob": "^7.1.1",
     "hidstream": "^2.1.0",
     "mpg123": "^0.2.1"
