Pulling out device and card specifics into a config file

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "forever": "^0.15.3",
     "glob": "^7.1.1",
     "hidstream": "^2.1.0",
+    "inquirer": "^2.0.0",
     "mpg123": "^0.2.1"
   }
 }
